WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126779
FreeBSD build fixes
https://bugs.webkit.org/show_bug.cgi?id=126779
Summary
FreeBSD build fixes
Koop Mast
Reported
2014-01-10 13:45:12 PST
Add sys/wait.h for WIFEXITED and WEXITSTATUS defines. FreeBSD doesn't have SIGCLD, wrap the code in #if defined(SIGCLD).
Attachments
build fixes
(2.24 KB, patch)
2014-01-10 13:45 PST
,
Koop Mast
no flags
Details
Formatted Diff
Diff
Build fixes for FreeBSD
(1.55 KB, patch)
2014-01-18 06:42 PST
,
Koop Mast
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Koop Mast
Comment 1
2014-01-10 13:45:58 PST
Created
attachment 220882
[details]
build fixes
Koop Mast
Comment 2
2014-01-15 10:53:20 PST
Comment on
attachment 220882
[details]
build fixes set review flag
Sergio Correia (qrwteyrutiyoup)
Comment 3
2014-01-15 11:49:58 PST
Comment on
attachment 220882
[details]
build fixes View in context:
https://bugs.webkit.org/attachment.cgi?id=220882&action=review
> ChangeLog:10 > +
I believe you shouldn't update this file, only the one in Source/WebKit2/Changelog.
Koop Mast
Comment 4
2014-01-18 06:42:38 PST
Created
attachment 221543
[details]
Build fixes for FreeBSD Same patch as before but used Tools/Scripts/prepare-ChangeLog to generate the Changelog.
WebKit Commit Bot
Comment 5
2014-01-22 03:11:03 PST
Comment on
attachment 221543
[details]
Build fixes for FreeBSD Clearing flags on attachment: 221543 Committed
r162513
: <
http://trac.webkit.org/changeset/162513
>
WebKit Commit Bot
Comment 6
2014-01-22 03:11:05 PST
All reviewed patches have been landed. Closing bug.
Antoine Jacoutot
Comment 7
2014-01-27 13:42:31 PST
Hi. I don't understand this patch. Isn't SIGCLD the same as SIGCHLD? If so then why not s/SIGCLD/SIGCHLD which will work everywhere. That is what we've been using on OpenBSD. Unless I am missing something obvious...
Landry Breuil
Comment 8
2014-02-14 13:51:11 PST
(In reply to
comment #7
)
> Hi. > > I don't understand this patch. Isn't SIGCLD the same as SIGCHLD? > If so then why not s/SIGCLD/SIGCHLD which will work everywhere. That is what we've been using on OpenBSD. > Unless I am missing something obvious...
Yes... Koop, can you elaborate on why #if'ing out those parts ? We've used this for 2.2:
http://www.openbsd.org/cgi-bin/cvsweb/ports/www/webkit/patches/patch-Source_WebKit2_UIProcess_Plugins_unix_PluginProcessProxyUnix_cpp?rev=1.4;content-type=text%2Fplain
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug