Build fixes for FreeBSD. https://bugs.webkit.org/show_bug.cgi?id=126779

Patch by Koop Mast <kwm@FreeBSD.org> on 2014-01-22
Reviewed by Csaba Osztrogonác.

* UIProcess/Plugins/unix/PluginProcessProxyUnix.cpp:
(WebKit::PluginProcessProxy::scanPlugin):

Canonical link: https://commits.webkit.org/145416@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162513 268f45cc-cd09-0410-ab3c-d52691b4dbfc